gcc/testsuite/rust/rustc/ui/error-codes/E0463.rs
#![feature(plugin)]
#![plugin(cookie_monster)]
// { dg-error ".E0463." "" { target *-*-* } .-1 }
extern crate cake_is_a_lie;

fn main() {
}

